CSS/style.css
*{
    font-family: 'Poppins', sans-serif;
    color: white;
}

html, body{
    margin: 0;
    height:100%;
    width:100%;
    padding:0;
    background-color: #171041;
}

section:not(#projects){
    display: block;
    height:100%;
    width:100%;
    padding: 60px;
    padding-left: 120px;
    box-sizing:border-box;
}

div{
    width: 100%;
    margin-top: 10%;
}

#navSectionLinks{
    color: #05646d9c;
    font-weight: bold;
    font-size: large;
    padding-left: 85%;
}

#intro{
    background-color: #2b2552;
}

#effectName{
    transition: all 0.5s;
    -webkit-text-stroke: 2px #d6f4f4;
    font-variation-settings: "wght" 988, "ital" 1;
    font-size: 6rem;
    color: transparent;
    font-family: "Meta", sans-serif;
    text-shadow: 10px 10px 0 #07bccc,
    15px 15px 0 #e601c0,
    20px 20px 0 #e9019a,
    25px 25px 0 #f40468,
    45px 45px 10px #482896;
    cursor: pointer;
}

#effectName:hover{
    -webkit-text-stroke: 1px #d6f4f4;
    font-variation-settings: "wght" 100, "ital" 0;
    text-shadow: none;
}

#about-me{
    background-color: #302579;
}

#skillIcon{
    height: 40px;
    padding-top: 7px;
}

#projects{
    background-color: #171041;
    min-width: 100%;
    min-height: 100%;
}

#projectCard{
    background-color: #5a518d;
}

#socials{
    background-color: #2b2552;
    font-weight: bold;
    font-size: larger;
}

#socialIcon{
    height: 50px;
    fill: white;
}

.socialIconLeft{
    padding-left: 10rem;
}

@media screen and (max-width: 980px) and (min-width: 540px){
    #effectName{
        transition: all 0.5s;
        -webkit-text-stroke: 1px #d6f4f4;
        font-variation-settings: "wght" 988, "ital" 1;
        font-size: 4rem;
        color: transparent;
        font-family: "Meta", sans-serif;
        text-shadow: 5px 5px 0 #07bccc,
        10px 10px 0 #e601c0,
        10px 10px 0 #e9019a,
        15px 15px 0 #f40468,
        25px 25px 5px #482896;
        cursor: pointer;
    }

    #socialIcon{
        height: 25px;
    }

    .socialIconLeft{
        padding-left: 2rem;
    }

    #mailP{
        font-size: medium;
    }

    #resume{
        font-size: medium;
    }

    #skillIcon{
        height: 25px;
        padding-top: 4px;
    }

    #navSectionLinks{
        display: none;
    }
}

@media screen and (max-width: 540px){
    *{
        font-size: small;
    }
    
    h3{
        font-size: small;
    }

    #effectName{
        transition: all 0.5s;
        -webkit-text-stroke: 1px #d6f4f4;
        font-variation-settings: "wght" 988, "ital" 1;
        font-size: 4rem;
        color: transparent;
        font-family: "Meta", sans-serif;
        text-shadow: 5px 5px 0 #07bccc,
        10px 10px 0 #e601c0,
        10px 10px 0 #e9019a,
        15px 15px 0 #f40468,
        25px 25px 5px #482896;
        cursor: pointer;
    }

    #socialIcon{
        height: 25px;
    }

    .socialIconLeft{
        padding-left: 2rem;
    }

    #skillIcon{
        height: 15px;
        padding-top: 3px;
    }

    #navSectionLinks{
        display: none;
    }
}

